--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                      Electroniques
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Téléphone & Tablette</a></li> <hr>
+                      <li><a class="dropdown-item" href="#">Accessoires Mobile</a></li>
+                      <!-- <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                     </ul>
                   </li>
                    <!-- fin drop 2 -->
@@ -54,10 +54,10 @@
                           Electroménagers
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          <li><a class="dropdown-item" href="#">Gros Electroménager</a></li> <hr>
+                          <li><a class="dropdown-item" href="#">Petit Electroménager</a></li>
+                          <!-- <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                         </ul>
                       </li>
                      <!-- DROP 3 F -->
