--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     
                 </ul>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-sm-12">
                 <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -168,7 +168,7 @@
                     </div>
                     
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/2.jpg" alt="" class="img-fluid">
                     <p class="para">Bml Tablette éducative <br> antichoc – enfant – ecran <br> 7pouce – Memoire 256go <br> Ram8go <br>
                         BML </p>
@@ -181,7 +181,7 @@
                         <i class="bi bi-star"></i>
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/3.webp" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -196,7 +196,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/4.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -211,7 +211,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/5.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -226,7 +226,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/6.png" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -241,7 +241,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/7.jpeg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -256,7 +256,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/8.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -271,7 +271,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/9.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -286,7 +286,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/10.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -301,7 +301,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/11.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -316,7 +316,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/12.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -331,7 +331,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/13.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -346,7 +346,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/14.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -361,7 +361,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/15.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
@@ -376,7 +376,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-sm-12">
                     <img src="img/16.jpg" alt="" class="img-fluid">
                     <div class="para text-center">
                         <p>Tablette DISCOVER Note 18 <br>Plus – Ecran : 10 pouces″ – <br> Caméra : 13mp + 8mp – <br> Capacité : 1 To GB – 8GB ram <br>
